fixed width of content so it won't overflow with toggle

--- a/web-client/public/stylesheets/chuzr.styl
+++ b/web-client/public/stylesheets/chuzr.styl
@@ -30,7 +30,7 @@ a:hover
   margin-left: 1%
   padding-left: 10px
   background-color: rgba(256, 256, 256, .75)
-  width:83%
+  width:82%
   overflow: auto
 
 #side-nav
